c/examples/writing-a-c-compiler-tests/tests/chapter_10/valid/libraries/external_tentative_var.c
/* Tentatively define a variable, and make sure it's initialized to 0. */
int x;

int read_x(void) {
    return x;
}