c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_declarations/undeclared_global_variable.c
int main(void) {
    return x;
}

/* you must declare a file-scope variable before using it */
int x = 0;
